# Mariner2

./: .gitignore  CMakeLists.txt  build.py
examples/: main.cpp
include/App/: m_AppContextService.hpp  m_Application.hpp
include/Core/: m_EngineContextService.hpp
include/Enums/: m_RunState.h
include/Libraries/: m_Array.h  m_Color.h  m_Dictionary.h  m_Instance.h  m_Matrix.h  m_Signal.h  m_SignalConnection.h  m_String.h  m_Vector3D.h
include/Mariner/: Mariner.h  MarinerTypes.h
include/Objects/: m_BasePart.h  m_BaseScript.h  m_Camera.h  m_DataModel.h  m_Job.h  m_Object.h  m_ServiceProvider.h  m_Thread.h  m_Window.h
include/Services/: m_MemStorageService.h  m_MessageBusService.h  m_RunService.h  m_ScriptContext.h  m_TaskScheduler.h  m_Workspace.h
include/Utils/: m_Memory.h
src/App/: m_AppContextService.cpp  m_Application.cpp  m_Entry.cpp
src/Core/: m_EngineContextService.cpp
src/Libraries/: m_Array.cpp  m_Color.cpp  m_Dictionary.cpp  m_Instance.cpp  m_Signal.cpp  m_SignalConnection.cpp  m_String.cpp  m_Vector3D.cpp
src/Objects/: m_BasePart.cpp  m_BaseScript.cpp  m_Camera.cpp  m_DataModel.cpp  m_Job.cpp  m_Object.cpp  m_ServiceProvider.cpp  m_Thread.cpp  m_Window.cpp
src/Services/: m_MemStorageService.cpp  m_MessageBusService.cpp  m_RunService.cpp  m_ScriptContext.cpp  m_TaskScheduler.cpp  m_Workspace.cpp
src/Shaders/: m_DefaultFrag.frag  m_DefaultVertex.vert
src/Utils/: m_Memory.cpp
tools/: fix_cling_dylibs.sh
